<resources>
    <string name="app_name">Vocabulary</string>
    <string name="developers">
        \tАлексеев Николай\n
        \tАнтипов Андрей\n
        \tБондаренко Илья\n
        \tДашкевич Кирилл\n
        \tЛапикова Алина\n
        \tЛебедев Никита\n
        \tЛузьянов Дима\n
        \tМищенко Денис\n
        \tНуров Шохрух\n
        \tПирогова Дарья\n
        \tПоцелйко Анна\n
        \tРахметов Руслан\n
        \tТерентьева Полина\n
        \tШпейло Екатерина
    </string>
    <string name="aboutUsMenu">О нас</string>
    <string name="aboutAppMenu">О приложении</string>
    <string name="addWordMenu">Добавить слово</string>
    <string name="developersHead">Разработчики:</string>
    <string name="enterWord">Введите слово</string>
    <string name="search">Поиск</string>
    <string name="ways">Направления:</string>
    <string name="way_10_05_03"><u>10.05.03 Информационная безопасность атоматизированных систем</u></string>
    <string name="way_10_03_01"><u>10.03.01 Информационная безопасность</u></string>
    <string name="way_09_03_01_01"><u>09.03.01.01 Информатика и вычислительная техника (веб-технологии)</u></string>
    <string name="way_09_03_01_02"><u>09.03.01.02 Информатика и вычислительная техника (интеграция и программирование в САПР)</u></string>
    <string name="way_09_03_03"><u>09.03.03 Прикладная информатика</u></string>
    <string name="way_01_03_02"><u>01.03.02 Прикладная математика и информатика</u></string>
    <string name="way_27_03_04_02"><u>27.03.04.02 Управление в технических системах (киберфизические системы)</u></string>
    <string name="way_38_03_05_01"><u>38.03.05.01 Бизнес-информатика (ИТ-менеджмент)</u></string>
    <string name="enterDescription">Введите определение</string>
    <string name="exit">Выход</string>
    <string name="apply">Применить</string>
    <string name="teamEnd">Команда студентов первого курса факультета информационных технологий московского политехнического университета:</string>
    <string name="aboutAppText">Приложение создано для абитуриентов и первокурсников московского политеха с целью ознакомления с терминами и понятиями, используемыми специалистами определённого профиля подготовки</string>
</resources>
